# my-knowledge-graph

./: .env.example  .gitignore  CLAUDE.md  NEXT_LEVEL.md  README.md  SYNAPSE_PRD.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py  script.py.mako
alembic/versions/: 20260528_1130_baseline_m0_through_m4.py
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: Card.tsx  GatewayDownBanner.tsx  InboxPanel.tsx  NodeBadge.tsx  Sidebar.tsx  Stat.tsx
dashboard/lib/: api.ts  format.ts  (+2 more)
deploy/: INSTALL.md  MIGRATE.md
extension/: README.md  background.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
graphify-out/: .graphify_analysis.json  .graphify_semantic_marker  graph.json  manifest.json
scripts/: run_m0_gate.py
synapse/: __init__.py  config.py  logging_setup.py  manifest.py  scheduler.py
tests/: conftest.py  test_auth.py  test_clipboard.py  test_communities.py  test_consolidator.py  test_critic.py  test_dashboard_api.py  test_database.py  test_email_parsing.py  test_embeddings.py  test_energy_inference.py  test_freshness.py  test_git_hook.py  test_git_ingest.py  test_github_integration.py  test_graph_operations.py  test_guardian.py  test_health.py  test_hebbian.py  test_horizon.py  test_inbox.py  test_ingest_endpoints.py  test_librarian.py  test_llm_client.py  test_manifest.py  test_ocr.py  test_retention.py  test_retention_review.py  test_scheduler.py  test_scout.py  test_search.py  test_strategist.py  test_synthesizer.py  test_vault_sync.py
(+71 files in other folders)
